# savings-tracker

./: .flake8  Dockerfile  README.md  app.py  config.py  docker-compose.yml  models.py  prepara_banco.py  pyproject.toml  views.py
.devcontainer/: docker-compose.yml
.github/workflows/: pre-commit.yaml
templates/: novo.html  novo_acompanhamento.html  sonho_detalhes.html  sonhos.html  template.html
